# python-repo-template

./: .coveragerc  .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  pyproject.toml  setup.cfg  setup.py  templatize
.gemini/commands/: templatize.toml
.github/disabled-workflows/: publish.yaml  test-slow.yaml
.github/workflows/: pre-commit.yaml  test.yaml
python_repo_template/: __init__.py
tests/: conftest.py  test_missing.py  test_nothing.py  test_template.py
{{REPO_NAME_SNAKECASE}}/: __init__.py
